fixing the sections jump button bkgrnd color for safari and firefox

--- a/static/css/my_changes.css
+++ b/static/css/my_changes.css
@@ -649,6 +649,29 @@ section h3.section-subheading {
 
 }
 
+@media(min-width:992px) {
+  .modal-content .summary_and_jumps #case_study_btn_grp button {
+    /* transition: padding .3s; */
+    background-color: white;
+    color: #333;
+    border: none;
+    margin: 2px;
+    /* border-radius: 4px; */
+    /* text-decoration: underline; */
+    /* font-weight: bold; */
+    font-family: "Montserrat","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 16px;
+    padding-left: 12px;
+  }
+
+  .modal-content .summary_and_jumps #case_study_btn_grp button:hover {
+    /* text-decoration: underline; */
+    font-weight: bold;
+    border-left: 1px solid #333;
+  }
+
+}
+
 .modal-content .summary_and_jumps #case_study_btn_grp button:hover {
   /* text-decoration: underline; */
   font-weight: bold;
@@ -1077,7 +1100,7 @@ ul.social-buttons li a:active {
     position: fixed;
     bottom: 0;
     right: 0;
-    background-color: none;
+    background-color: white;
     color: #333;
     border: none;
     margin: 2px;
@@ -1092,7 +1115,7 @@ ul.social-buttons li a:active {
     position: fixed;
     bottom: 10%;
     right: 5%;
-    background-color: none;
+    background-color: white;
     color: #333;
     border: 1px solid #333;
     margin: 2px;
